src/objects/CMS_Delivery_Charge__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Cash_Order_Amount_Charge_Value__c</fullName>
        <label>Cash Order Amount Charge Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_Order_Amount_Range__c</fullName>
        <label>Cash Order Amount Range</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Coin_Bag_Charge__c</fullName>
        <inlineHelpText>per coin amount ordered</inlineHelpText>
        <label>Coin Bag Charge</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Collection_Amount_Charge_Value__c</fullName>
        <label>Collection Amount Charge Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Collection_Amount_To_Range__c</fullName>
        <label>Collection Amount To Range</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>CMS Delivery Charge</label>
</CustomObject>